@@ -1,5 +1,6 @@
 = v.1.3.5 (in git)
 * Added support for icon on markers.
+* Google API key is no longer required when requesting a static map (will be deprecated and then removed from this gem soon)
 
 = v.1.3.4
 * Paths are now as default encoding it's points with Google's encoding algorithm. Thanks to Joel Rosenberg for providing an easy class to use.
